# rTask

./: .gitignore  README.md
backend/: Cargo.toml  db.sqlite  diesel.toml
backend/migrations/2025-08-26-055128_create_users/: up.sql
backend/migrations/2025-08-27-055942_tasks/: up.sql
backend/src/: db.sqlite  main.rs  schema.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs  task.rs  user.rs
backend/src/repository/: mod.rs  task.rs  user.rs
backend/src/routes/: task.rs  user.rs
backend/src/service/: task.rs  user.rs
frontend/: Cargo.toml
frontend/src/: main.rs
