[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
diesel = {version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = {version = "1.47.1", features = ["full"]}
